--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-auth": "^5.0.0-beta.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
     "react-redux": "^9.0.4",
     "redux": "^5.0.1"
   },
