--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.12.8",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.1",
     "dayjs": "^1.11.10",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.4",
