--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@canvasjs/react-charts": "^1.0.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
     "@mui/material": "^5.15.3",
     "@mui/x-date-pickers": "^6.18.7",
     "@prisma/client": "^5.7.1",
@@ -26,7 +28,9 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-redux": "^9.0.4",
+    "react-resizable": "^3.0.5",
     "redux": "^5.0.1",
     "sr-visualizer": "^1.0.13"
   },
@@ -36,6 +40,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-resizable": "^3.0.7",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
