--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "antd": "^5.12.8",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.1",
+    "chartjs-plugin-zoom": "^2.0.1",
     "dayjs": "^1.11.10",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.4",
@@ -45,6 +46,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
+    "prettier": "^3.2.2",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "prisma": "^5.7.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
